--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ Django==5.1.1
 psycopg[binary,pool]==3.1.19
 python-dotenv==1.0.1
 django-phonenumber-field[phonenumberslite]==8.0.0
+# Static analysis tools
+pylint==3.3.1
+pylint-django==2.5.5
