feat: #18 add password recovery feature

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,5 +29,13 @@ services:
       - POSTGRES_USER=${DATABASE_USER}
       - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
 
+  # Email Server and Web Interface for viewing and testing emails during development
+  maildev:
+    image: maildev/maildev
+    container_name: maildev
+    ports:
+      - "1025:1025" # SMTP protocol port
+      - "1080:1080" # UI port
+
 volumes:
   postgres_data:
