--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,9 @@ services:
     image: maildev/maildev
     container_name: maildev
     ports:
-      - "1025:1025" # SMTP protocol port
-      - "1080:1080" # UI port
+      - "${MAILDEV_SMTP_PORT}:1025" # SMTP protocol port
+      - "${MAILDEV_UI_PORT}:1080"   # UI port
+
 
 volumes:
   postgres_data:
