--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,6 @@ colorama==0.4.6
 cryptography==43.0.1
 defusedxml==0.8.0rc2
 Django==5.1.1
-django-phonenumber-field==8.0.0
 django-templated-mail==1.1.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
@@ -47,9 +46,12 @@ Pillow==10.4.0
 vine==5.1.0
 wcwidth==0.2.13
 redis==5.1.1
-channels==4.1.0
+pillow==10.4.0
+django-channels==0.7.0
+daphne==4.1.2
+channels[daphne]~=4.1.0
 django-extensions==3.2.3
-channels_redis==4.2.0 
+channels_redis==4.2.0
 msgpack==1.1.0
 aiosmtplib==3.0.2
 
