--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     image: postgres:14
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    ports:
+      - ${DATABASE_PORT}:5432
     environment:
       - POSTGRES_DB=${DATABASE_NAME}
       - POSTGRES_USER=${DATABASE_USER}
@@ -36,6 +38,8 @@ services:
     image: mongo
     container_name: mongo
     restart: always
+    ports:
+      - ${MONGODB_PORT}:27017
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USERNAME}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
@@ -45,7 +49,7 @@ services:
     container_name: mongo-express
     restart: always
     ports:
-      - ${MONGODB_PORT}:8081
+      - ${MONGO_EXPRESS_PORT}:8081
     environment:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGODB_ADMINUSERNAME}
       - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGODB_ADMINPASSWORD}
