--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,8 @@ django-simple-history==3.7.0
 django-cors-headers==4.5.0
 django-allauth==65.0.2
 dj-rest-auth==6.0.0
+bleach==6.2.0
+Werkzeug==3.1.1
 
 # Elasticsearch-related dependencies
 django-elasticsearch-dsl==8.0
