--- a/requirements.txt
+++ b/requirements.txt
@@ -61,6 +61,7 @@ django-allauth==65.0.2
 dj-rest-auth==6.0.0
 bleach==6.2.0
 Werkzeug==3.1.1
+bandit==1.7.10
 
 # Elasticsearch-related dependencies
 django-elasticsearch-dsl==8.0
@@ -70,5 +71,3 @@ elastic-transport==8.15.1
 elasticsearch==8.15.1
 elasticsearch-dsl==8.9.0
 packaging==24.1
-
-
