--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     depends_on:
       - db
       - redis
+      - elasticsearch
     environment:
       - DJANGO_SECRET_KEY=${SECRET_KEY}
       - DJANGO_DEBUG=${DEBUG}
@@ -21,6 +22,8 @@ services:
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
       - DATABASE_HOST=${DATABASE_HOST}
       - DATABASE_PORT=${DATABASE_PORT}
+      - ELASTICSEARCH_HOST=elasticsearch
+      - ELASTICSEARCH_PORT=9200
     env_file:
       - .env
 
@@ -48,8 +51,7 @@ services:
       - POSTGRES_USER=${DATABASE_USER}
       - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
 
-  
-
+  # MongoDB database
   mongo:
     image: mongo
     container_name: mongo
@@ -72,7 +74,7 @@ services:
       - ME_CONFIG_MONGODB_URL=mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@mongo:27017/
       - ME_CONFIG_BASICAUTH=false
 
-  # Redis для Celery
+  # Redis for Celery
   redis:
     image: redis:6
     ports:
@@ -108,5 +110,18 @@ services:
       - "${MAILDEV_SMTP_PORT}:1025"
       - "${MAILDEV_UI_PORT}:1080"
 
+  # Elasticsearch service
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
+    environment:
+      - discovery.type=single-node
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ports:
+      - "9200:9200"
+    volumes:
+      - elasticsearch_data:/usr/share/elasticsearch/data
+    restart: always
+
 volumes:
   postgres_data:
+  elasticsearch_data:
